code/backend/k8s/ingress/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: banco.local
      http:
        paths:
          - path: /crawler
            pathType: Prefix
            backend:
              service:
                name: crawler-service
                port:
                  number: 3000
